Remove visited link colour to stop flickering on refresh

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1 {
     text-align: center;
 }
 
-a:link {
+a:link, a:visited {
     color: black;
     text-decoration: none;
 }
